--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/rentDB?createDatabaseIfNotExist=true
     username: root
-    password: 
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
